# arbitrager

./: .dockerignore  .gitignore  .railwayignore  .vercelignore  AUTO_DEPLOY.md  CREATE_REPO_AND_DEPLOY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOY_ALL.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NEXT.md  DEPLOY_NOW.md  DEPLOY_VIA_GITHUB.md  Dockerfile  FINAL_STATUS.md  NEXT_STEPS.md  PUSH_INSTRUCTIONS.md  PUSH_NOW.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_FIX.md  README.md  README_DEPLOY.md  SETUP_SUMMARY.md  TOKEN_ISSUE.md  TROUBLESHOOTING.md  deploy-bot.sh  deploy-complete.sh  fly.toml  push-to-github.sh  railway.json  render.yaml  start-bot.sh  vercel.json
.github/workflows/: deploy.yml
bins/arb-daemon/: Cargo.toml
bins/arb-daemon/src/: api.rs  main.rs
config/: example.toml
crates/arb_core/: Cargo.toml
crates/arb_core/src/: config.rs  lib.rs  risk.rs  types.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: binance.rs  bybit.rs  hyperevm.rs  hyperliquid.rs  jupiter.rs  lib.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: funding_arb.rs  hyperevm_spot.rs  lib.rs  solana_jupiter.rs
dashboard/: DEPLOY.md  DEPLOYMENT_STATUS.md  README.md  next.config.js  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/proxy/: route.ts
dashboard/components/: MetricsChart.tsx  OpportunitiesTable.tsx  PositionsTable.tsx  StatusCard.tsx
