[workspace]
members = [
    "crates/arb_core",
    "crates/connectors",
    "crates/strategies",
    "bins/arb-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["arbitrager"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
rust_decimal = "1.33"
chrono = { version = "0.4", features = ["serde"] }
ethers = { version = "2.0" }
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
