[package]
name = "strategies"
version.workspace = true
edition.workspace = true

[dependencies]
arb_core = { path = "../arb_core" }
connectors = { path = "../connectors" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
